# AppEco

./: .gitignore  ESP32_MQTT_Protocol.md  GUIA_GIT.md  README.md  README_FINAL.md  README_HIVEMQ_CLOUD.md  README_INSTALACION.md  README_LCD.md  app.py  convert_model.py  install_raspberry_pi.sh  install_raspberry_pi_improved.sh  install_windows.bat  lcd_setup.py  pyproject.toml  requirements.txt
config/: config.py
modelo/: keras_model.h5  labels.txt  model.tflite
services/: camera_service.py  firebase_service.py  mqtt_service.py  nfc_service.py
ui/: ui_components.py
