[project]
name = "appeco"
version = "0.1.0"
description = "Sistema de Reciclaje Inteligente con IA para detección de materiales"
requires-python = ">=3.11,<3.12"
dependencies = [
    "firebase-admin==6.4.0",
    "paho-mqtt==1.6.1",
    "opencv-python==4.8.1.78",
    "numpy==1.24.3",
    "pygame==2.5.2",
    "pyscard==2.1.1",
    "tflite-runtime==2.14.0",
    "requests==2.31.0",
    "Pillow==10.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.9.1",
    "flake8==6.1.0",
]
windows = [
    "tensorflow==2.14.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "config*", "ui*", "modelo*", "sounds*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
